# bund_blobstore

./: .gitignore  Cargo.toml  README.md
Documentation/: CLEAR_SYNC.md  DATA_DISTRIBUTION.md  DOCUMENT_STORAGE.md  EMBEDDINGS.md  GLOBAL_UNIFIED_DATA_PLATFORM.md  GROK_INTEGRATION.md  JSON_FINGERPRINTING.md  LOG_INGESTION.md  LOG_WORKER_POOL.md  MULTIDIMENTIONAL.md  ROOT_CAUSE_ANALYSIS.md  TIMELINE.md  VIRTUAL_FILESYSTEM.md
demo/: chunkeddocument_demo.rs  concurent_demo.rs  data_distribution_demo1.rs  data_distribution_demo2.rs  distributed_graph_demo.rs  rag_demo.rs  sharding_demo.rs  sharding_with_cache.rs  telemetry_demo.rs  telemetry_store_demo.rs  timeline_demo.rs  unified_vector_telemetry_demo.rs
examples/: advanced_deduplication_search.rs  datadistributionmanager_timed_telemetry.rs  document_search_demo.rs  embeddings_demo.rs  global_unified_data_platform.rs  hybrid_search_demo.rs  internal_embeddings_demo.rs  json_fingerprint_demo.rs  multidimensional_demo.rs  root_cause_analysis_demo.rs  similarity_search_demo.rs  telemetry_deduplication_demo.rs  telemetry_sharding_demo.rs  vfs_demo.rs
multidim_demo_data/shard_0/: data.redb
multidim_demo_data/shard_1/: data.redb  vectors.redb
multidim_demo_data/shard_2/: data.redb
multidim_demo_data/shard_3/: data.redb  vectors.redb
obsolete/: dynamic_shard_management.rs  dynamic_shard_manager.rs
src/: batch.rs  blobstore.rs  concurrent.rs  data_distribution.rs  distributed_graph.rs  faceted_search.rs  fuzzy_algorithms.rs  graph_algorithms.rs  graph_store.rs  lib.rs  multi_modal.rs  pool.rs  search.rs  serialization.rs  sharding.rs  timeline.rs  vector.rs  vector_timeline.rs
src/common/: embeddings.rs  grok_integration.rs  json_fingerprint.rs  log_ingestor.rs  log_worker_pool.rs  mod.rs  multidimensional_storage.rs  root_cause_analyzer.rs  virtual_filesystem.rs
src/vm/: db.rs  log_provider.rs  mod.rs  vm.rs
src/vm/helpers/: conf.rs  eval.rs  file_helper.rs  filesystem_helper.rs  hostname.rs  mod.rs  print_error.rs
src/vm/stdlib/: mod.rs
src/vm/stdlib/bund/: bund_eval.rs  bund_exit.rs  bund_fun.rs  bund_interpreter.rs  bund_use.rs  mod.rs
src/vm/stdlib/conditional/: conditional_fmt.rs  mod.rs
src/vm/stdlib/console/: mod.rs  terminal.rs
src/vm/stdlib/debug_fun/: debug_display_stack.rs  mod.rs
src/vm/stdlib/encoding/: base64.rs  mod.rs
src/vm/stdlib/filesystem/: cp.rs  cwd.rs  file.rs  file_write.rs  filepath.rs  filesystem.rs  ls.rs  mod.rs
src/vm/stdlib/global_db/: db.rs  mod.rs
src/vm/stdlib/math/: clusters.rs  interp.rs  math.rs  mod.rs  normalize.rs  rand.rs  seq.rs  smoothing.rs
src/vm/stdlib/statistics/: count.rs  get_data.rs  minmax.rs  mod.rs  statistics.rs
src/vm/stdlib/string/: any_id.rs  distance.rs  fuzzy_match.rs  grok.rs  mod.rs  prefix_suffix.rs  random.rs  regex.rs  regex_matches.rs  regex_split.rs  textexpr_match.rs  textwrap.rs  tokenize.rs  unicode.rs  wildmatch.rs
tests/: advancedchunking-test.rs  blobstore-test.rs  chunkeddocument-test.rs  closesync-test.rs  commonembeddings-test.rs  commongrokintegration-test.rs  commonjsonfingerprint-test.rs  commonlogingestor-test.rs  commonlogworkingpool-test.rs  commonmultidimensionalstorage-test.rs  commonrootcauseanalyzer-test.rs  commonvirtualfilesystem-test.rs  concurrent-test.rs  datadistribution-test.rs  distributedgraph-tests.rs  dynamicsharding-test.rs  graphalgorithms-test.rs  graphstore-test.rs  multimodal-test.rs  search-test.rs  serialization-test.rs  sharding-test.rs  timeline-test.rs  vector-sharded-test.rs  vector-test.rs  vectortimeline-test.rs  vmeval-test.rs  vminit_adam-test.rs
unified_data_store/: blobs.redb  search.redb  timeline.redb  vectors.redb
unified_data_store/multidim.redb/shard_0/: data.redb
unified_data_store/multidim.redb/shard_1/: data.redb  vectors.redb
unified_data_store/multidim.redb/shard_2/: data.redb
unified_data_store/multidim.redb/shard_3/: data.redb  vectors.redb
unified_data_store/shard_0/: data.redb
unified_data_store/shard_1/: data.redb
unified_data_store/shard_2/: data.redb
vfs_storage/shard_0/: data.redb
vfs_storage/shard_2/: vectors.redb
(+5 files in other folders)
