[package]
name = "bund_blobstore"
version = "0.4.0"
edition = "2024"
description = "Basic support for storing compiled BUND bytecode into an external file"
license-file = "LICENSE"
repository = "https://github.com/vulogov/bund_blobstore"
categories = ["data-structures"]
keywords = ["value", "bund", "data", "blob"]

[dependencies]
redb = "3.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
rmp-serde = "1.1"
flate2 = "1.0"
crossbeam = "0.8"
log = "0.4.29"
parking_lot = "0.12.5"
ndarray = "0.15"  # For vector operations
rayon = "1.7"  # For parallel processing
fastembed = { version = "5.13.0" }

[dev-dependencies]
tempfile = "3.0"
