[package]
name = "bund_blobstore"
version = "0.9.0"
edition = "2024"
description = "Basic support for storing compiled BUND bytecode into an external file"
license-file = "LICENSE"
repository = "https://github.com/vulogov/bund_blobstore"
categories = ["data-structures"]
keywords = ["value", "bund", "data", "blob"]

[dependencies]
redb = "3.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
rmp-serde = "1.1"
flate2 = "1.0"
crossbeam = "0.8"
log = "0.4.29"
parking_lot = "0.12.5"
ndarray = "0.15"  # For vector operations
rayon = "1.7"  # For parallel processing
fastembed = { version = "5.13.0" }
strsim = "0.11"
image = "0.24"  # For image processing
hound = "3.5"   # For audio processing (WAV)
base64 = "0.21" # For encoding binary data
regex = "1.10"  # For pattern matching
chrono = { version = "0.4.*", features = ["serde"] }
rust_dynamic = "0.49.0"
rand = "0.10.0"

[dev-dependencies]
tempfile = "3.0"

[[example]]
name = "telemetry_sharding_demo"
path = "examples/telemetry_sharding_demo.rs"
