[package]
name = "bund_blobstore"
version = "0.15.3"
edition = "2024"
description = "Multifunctional data storage"
license-file = "LICENSE"
repository = "https://github.com/vulogov/bund_blobstore"
categories = ["data-structures"]
keywords = ["value", "bund", "data", "blob"]

[dependencies]
redb = "3.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
rmp-serde = "1.1"
flate2 = "1.0"
crossbeam = "0.8"
log = "0.4.29"
parking_lot = "0.12.5"
ndarray = "0.15"  # For vector operations
rayon = "1.7"  # For parallel processing
fastembed = { version = "5.13.0" }
strsim = "0.11"
image = "0.24"  # For image processing
hound = "3.5"   # For audio processing (WAV)
base64 = "0.21" # For encoding binary data
regex = "1.10"  # For pattern matching
chrono = { version = "0.4.*", features = ["serde"] }
rand = "0.10.0"
unicode-segmentation = "1.10"
rust-stemmers = "1.2.0"
grok = "2.4.1"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1.44"
murmurhash3 = "0.0.5"
reqwest = { version = "0.11", features = ["blocking"] }
lazy_static = "1.5.0"
shadow-rs = "1.7.1"
dashmap = "6.1.0"
fxhash = "0.2.1"
bund_language_parser = ">=0.*.*"
bundcore = ">=0.*.*"
rust_dynamic = ">=0.*.*"
rust_multistackvm = ">=0.*.*"
easy-error = "1.0.*"
rusty-termcolor = "0.1.62"
time-graph = "0.3.3"
curl = "0.4.49"
fs_extra = "1.3.0"
scan_dir = "0.3.3"
filesystem = "0.4.4"

[dev-dependencies]
tempfile = "3.0"

[[example]]
name = "telemetry_sharding_demo"
path = "examples/telemetry_sharding_demo.rs"

[[example]]
name = "telemetry_deduplication_demo"
path = "examples/telemetry_deduplication_demo.rs"

[[example]]
name = "advanced_deduplication_search"
path = "examples/advanced_deduplication_search.rs"

[[example]]
name = "similarity_search_demo"
path = "examples/similarity_search_demo.rs"

[[example]]
name = "root_cause_analysis_demo"
path = "examples/root_cause_analysis_demo.rs"

[[example]]
name = "hybrid_search_demo"
path = "examples/hybrid_search_demo.rs"

[[example]]
name = "json_fingerprint_demo"
path = "examples/json_fingerprint_demo.rs"

[[example]]
name = "multidimensional_demo"
path = "examples/multidimensional_demo.rs"

[[example]]
name = "vfs_demo"
path = "examples/vfs_demo.rs"
